force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/PWChrono_Full_Final_Settlement__c.object-meta.xml
<CustomObject>
    <label>Full and Final Settlement</label>
    <nameField>
        <displayFormat>FFS-{0000}</displayFormat>
        <label>Settlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Full and Final Settlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>