force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Text</type>
    <length>255</length>
</CustomField>