force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Lookup</type>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipName>PWChrono_Settlements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>