force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Lookup</type>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipName>PWChrono_Settlements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>