force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipName>PWChrono_Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>