force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>