force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Relieving_Date__c.field-meta.xml
<CustomField>
    <fullName>Relieving_Date__c</fullName>
    <label>Relieving Date</label>
    <type>Date</type>
</CustomField>