force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Separation__c.field-meta.xml
<CustomField>
    <fullName>Separation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Separation</label>
    <referenceTo>PWChrono_Employee_Separation__c</referenceTo>
    <relationshipName>Full_Final_Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>