force-app/main/default/objects/PWChrono_Full_Final_Settlement__c/fields/Total_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Total_Receivable__c</fullName>
    <label>Total Receivable</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>